tests/checker/bad/procedure_map_arg.scilla
scilla_version 0

library MyLib

contract ProcedureCallBadType ()

field m : Map Int32 ByStr20 = Emp Int32 ByStr20

(* Map arguments to procedures not allowed *)
procedure Proc1(map : Map Int32 ByStr20)
  new_arg = Int32 0
end

transition Trans1()
  Proc1 m
end

transition Trans2()
  map <- m;
  Proc1 map
end
